src/gen/blast_parser.output
Grammar

    0 $accept: shader END

    1 shader: shader_unit_rec

    2 shader_unit_rec: shader_unit_rec shader_unit
    3                | %empty

    4 shader_unit: function
    5            | function_prototype
    6            | struct

    7 function: function_decl function_body

    8 function_prototype: function_decl ';'

    9 function_decl: attribute_rec type IDENTIFIER function_parameters

   10 function_parameters: '(' function_parameter_list ')'
   11                    | '(' ')'

   12 function_parameter_list: function_parameter
   13                        | function_parameter_list ',' function_parameter

   14 function_parameter: type IDENTIFIER
   15                   | type

   16 function_body: braced_body

   17 braced_body: '{' body '}'

   18 body: statement_rec
   19     | %empty

   20 statement_rec: statement_rec statement
   21              | statement

   22 statement: statement_nb
   23          | braced_body
   24          | var_def ';'

   25 statement_nb_rec: statement_nb_rec statement_nb
   26                 | braced_body
   27                 | statement_nb

   28 statement_nb: if_statement
   29             | while_statement
   30             | for_statement
   31             | switch_statement
   32             | do_while_statement
   33             | expression ';'
   34             | "return" expression ';'
   35             | "return" ';'
   36             | "continue" ';'
   37             | "break" ';'
   38             | ';'

   39 if_statement: "if" '(' expression ')' statement
   40             | "if" '(' var_def ';' expression ')' statement

   41 while_statement: "while" '(' expression ')' statement

   42 for_statement: "for" '(' for_init ';' for_condition ';' for_action ')' statement

   43 switch_statement: "switch" switch_init switch_body

   44 do_while_statement: "do" statement "while" '(' expression ')' ';'

   45 for_init: var_def
   46         | %empty

   47 for_condition: expression
   48              | %empty

   49 for_action: expression
   50           | %empty

   51 switch_init: '(' expression ')'
   52            | '(' var_def ';' expression ')'

   53 switch_body: '{' switch_case_rec '}'

   54 switch_case_rec: switch_case_rec switch_case
   55                | switch_case_rec switch_default_case
   56                | %empty

   57 switch_case: "case" NUMLITERAL ':' case_body

   58 switch_default_case: "default" ':' case_body

   59 case_body: statement_nb_rec

   60 struct: attribute_rec "struct" '{' struct_body '}'

   61 struct_body: struct_members_continious

   62 struct_members_continious: struct_members_continious struct_member
   63                          | struct_member

   64 struct_member: attribute_rec type struct_member_continious ';'

   65 struct_member_continious: struct_member_continious ',' IDENTIFIER
   66                         | IDENTIFIER

   67 comma_expression: expression
   68                 | comma_expression ',' expression

   69 expression: IDENTIFIER
   70           | literal
   71           | '(' comma_expression ')'
   72           | expression '(' ')'
   73           | expression '(' comma_expression ')'
   74           | expression '[' expression ']'
   75           | expression "->" expression
   76           | expression "." expression
   77           | expression '=' expression
   78           | expression '+' expression
   79           | expression '-' expression
   80           | expression '*' expression
   81           | expression '/' expression
   82           | expression '%' expression
   83           | expression "+=" expression
   84           | expression "-=" expression
   85           | expression "*=" expression
   86           | expression "/=" expression
   87           | expression "%=" expression
   88           | expression "&=" expression
   89           | expression "|=" expression
   90           | expression "^=" expression
   91           | expression '^' expression
   92           | expression '|' expression
   93           | expression '&' expression
   94           | expression "||" expression
   95           | expression "&&" expression
   96           | expression "==" expression
   97           | expression "!=" expression
   98           | expression LESS expression
   99           | expression MORE expression
  100           | expression "<=" expression
  101           | expression ">=" expression
  102           | '-' expression
  103           | '+' expression
  104           | '*' expression
  105           | '&' expression
  106           | '!' expression
  107           | '~' expression
  108           | "++" expression
  109           | "--" expression
  110           | expression "++"
  111           | expression "--"
  112           | expression '?' expression ':' expression

  113 literal: NUMLITERAL
  114        | STRINGLITERAL

  115 var_def: attribute_rec type var_def_continious

  116 var_def_continious: var_def_continious ',' IDENTIFIER
  117                   | var_def_continious ',' IDENTIFIER '=' expression
  118                   | IDENTIFIER
  119                   | IDENTIFIER '=' expression

  120 type: type_mod type_variant type_suffix

  121 type_suffix: type_suffix type_suffix_variant
  122            | %empty

  123 type_suffix_variant: '*'
  124                    | "[]"

  125 type_mod: "const"
  126         | "specconst"
  127         | "novar"
  128         | "runtime"
  129         | %empty

  130 type_variant: simple_type
  131             | custom_type
  132             | complex_type_variant

  133 custom_type: USER_DEFINED_TYPE

  134 simple_type: void_type
  135            | int_type
  136            | float_type
  137            | bool_type

  138 complex_type_variant: matrix_type
  139                     | vector_type
  140                     | image_type
  141                     | sampler_type
  142                     | sampled_image_type

  143 void_type: "void"

  144 int_type: "int"

  145 float_type: "float"

  146 bool_type: "bool"

  147 vector_type: "vec" '<' simple_type ',' NUMLITERAL '>'

  148 matrix_type: "mat" '<' simple_type ',' NUMLITERAL ',' NUMLITERAL '>'

  149 image_type: "img"

  150 sampler_type: "smpl"

  151 sampled_image_type: "simg"

  152 attribute_rec: attribute_rec attribute
  153              | %empty

  154 attribute: "[[" attribute_body "]]"

  155 attribute_body: IDENTIFIER
  156               | IDENTIFIER ':' NUMLITERAL
  157               | IDENTIFIER ':' STRINGLITERAL
  158               | IDENTIFIER ':' IDENTIFIER


Terminals, with rules where they appear

END (0) 0
'!' (33) 106
'%' (37) 82
'&' (38) 93 105
'(' (40) 10 11 39 40 41 42 44 51 52 71 72 73
')' (41) 10 11 39 40 41 42 44 51 52 71 72 73
'*' (42) 80 104 123
'+' (43) 78 103
',' (44) 13 65 68 116 117 147 148
'-' (45) 79 102
'/' (47) 81
':' (58) 57 58 112 156 157 158
';' (59) 8 24 33 34 35 36 37 38 40 42 44 52 64
'<' (60) 147 148
'=' (61) 77 117 119
'>' (62) 147 148
'?' (63) 112
'[' (91) 74
']' (93) 74
'^' (94) 91
'{' (123) 17 53 60
'|' (124) 92
'}' (125) 17 53 60
'~' (126) 107
error (256)
"do" (258) 44
"while" (259) 41 44
"if" (260) 39 40
"switch" (261) 43
"for" (262) 42
"default" (263) 58
"case" (264) 57
"return" (265) 34 35
"break" (266) 37
"continue" (267) 36
"const" (268) 125
"specconst" (269) 126
"novar" (270) 127
"runtime" (271) 128
"void" (272) 143
"int" (273) 144
"float" (274) 145
"bool" (275) 146
"mat" (276) 148
"vec" (277) 147
"img" (278) 149
"smpl" (279) 150
"simg" (280) 151
"struct" (281) 60
IDENTIFIER (282) 9 14 65 66 69 116 117 118 119 155 156 157 158
USER_DEFINED_TYPE (283) 133
NUMLITERAL (284) 57 113 147 148 156
STRINGLITERAL (285) 114 157
"||" (286) 94
"&&" (287) 95
"==" (288) 96
"!=" (289) 97
LESS (290) 98
MORE (291) 99
"<=" (292) 100
">=" (293) 101
"++" (294) 108 110
"--" (295) 109 111
"+=" (296) 83
"-=" (297) 84
"*=" (298) 85
"/=" (299) 86
"%=" (300) 87
"&=" (301) 88
"^=" (302) 90
"|=" (303) 89
UMINUS (304)
UPLUS (305)
PTR_DR (306)
ADDR (307)
"." (308) 76
"->" (309) 75
POST_INC (310)
POST_DEC (311)
"[]" (312) 124
"[[" (313) 154
"]]" (314) 154


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
shader (84)
    on left: 1, on right: 0
shader_unit_rec (85)
    on left: 2 3, on right: 1 2
shader_unit (86)
    on left: 4 5 6, on right: 2
function (87)
    on left: 7, on right: 4
function_prototype (88)
    on left: 8, on right: 5
function_decl (89)
    on left: 9, on right: 7 8
function_parameters (90)
    on left: 10 11, on right: 9
function_parameter_list (91)
    on left: 12 13, on right: 10 13
function_parameter (92)
    on left: 14 15, on right: 12 13
function_body (93)
    on left: 16, on right: 7
braced_body (94)
    on left: 17, on right: 16 23 26
body (95)
    on left: 18 19, on right: 17
statement_rec (96)
    on left: 20 21, on right: 18 20
statement (97)
    on left: 22 23 24, on right: 20 21 39 40 41 42 44
statement_nb_rec (98)
    on left: 25 26 27, on right: 25 59
statement_nb (99)
    on left: 28 29 30 31 32 33 34 35 36 37 38, on right: 22 25 27
if_statement (100)
    on left: 39 40, on right: 28
while_statement (101)
    on left: 41, on right: 29
for_statement (102)
    on left: 42, on right: 30
switch_statement (103)
    on left: 43, on right: 31
do_while_statement (104)
    on left: 44, on right: 32
for_init (105)
    on left: 45 46, on right: 42
for_condition (106)
    on left: 47 48, on right: 42
for_action (107)
    on left: 49 50, on right: 42
switch_init (108)
    on left: 51 52, on right: 43
switch_body (109)
    on left: 53, on right: 43
switch_case_rec (110)
    on left: 54 55 56, on right: 53 54 55
switch_case (111)
    on left: 57, on right: 54
switch_default_case (112)
    on left: 58, on right: 55
case_body (113)
    on left: 59, on right: 57 58
struct (114)
    on left: 60, on right: 6
struct_body (115)
    on left: 61, on right: 60
struct_members_continious (116)
    on left: 62 63, on right: 61 62
struct_member (117)
    on left: 64, on right: 62 63
struct_member_continious (118)
    on left: 65 66, on right: 64 65
comma_expression (119)
    on left: 67 68, on right: 68 71 73
expression (120)
    on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
    87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107 108 109 110 111 112, on right: 33 34 39 40 41 44 47 49
    51 52 67 68 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
    89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
    108 109 110 111 112 117 119
literal (121)
    on left: 113 114, on right: 70
var_def (122)
    on left: 115, on right: 24 40 45 52
var_def_continious (123)
    on left: 116 117 118 119, on right: 115 116 117
type (124)
    on left: 120, on right: 9 14 15 64 115
type_suffix (125)
    on left: 121 122, on right: 120 121
type_suffix_variant (126)
    on left: 123 124, on right: 121
type_mod (127)
    on left: 125 126 127 128 129, on right: 120
type_variant (128)
    on left: 130 131 132, on right: 120
custom_type (129)
    on left: 133, on right: 131
simple_type (130)
    on left: 134 135 136 137, on right: 130 147 148
complex_type_variant (131)
    on left: 138 139 140 141 142, on right: 132
void_type (132)
    on left: 143, on right: 134
int_type (133)
    on left: 144, on right: 135
float_type (134)
    on left: 145, on right: 136
bool_type (135)
    on left: 146, on right: 137
vector_type (136)
    on left: 147, on right: 139
matrix_type (137)
    on left: 148, on right: 138
image_type (138)
    on left: 149, on right: 140
sampler_type (139)
    on left: 150, on right: 141
sampled_image_type (140)
    on left: 151, on right: 142
attribute_rec (141)
    on left: 152 153, on right: 9 60 64 115 152
attribute (142)
    on left: 154, on right: 152
attribute_body (143)
    on left: 155 156 157 158, on right: 154


State 0

    0 $accept: . shader END
    1 shader: . shader_unit_rec
    2 shader_unit_rec: . shader_unit_rec shader_unit
    3                | . %empty

    $default  reduce using rule 3 (shader_unit_rec)

    shader           go to state 1
    shader_unit_rec  go to state 2


State 1

    0 $accept: shader . END

    END  shift, and go to state 3


State 2

    1 shader: shader_unit_rec .  [END]
    2 shader_unit_rec: shader_unit_rec . shader_unit
    4 shader_unit: . function
    5            | . function_prototype
    6            | . struct
    7 function: . function_decl function_body
    8 function_prototype: . function_decl ';'
    9 function_decl: . attribute_rec type IDENTIFIER function_parameters
   60 struct: . attribute_rec "struct" '{' struct_body '}'
  152 attribute_rec: . attribute_rec attribute
  153              | . %empty  ["const", "specconst", "novar", "runtime", "void", "int", "float", "bool", "mat", "vec", "img", "smpl", "simg", "struct", USER_DEFINED_TYPE, "[["]

    END       reduce using rule 1 (shader)
    $default  reduce using rule 153 (attribute_rec)

    shader_unit         go to state 4
    function            go to state 5
    function_prototype  go to state 6
    function_decl       go to state 7
    struct              go to state 8
    attribute_rec       go to state 9


State 3

    0 $accept: shader END .

    $default  accept


State 4

    2 shader_unit_rec: shader_unit_rec shader_unit .

    $default  reduce using rule 2 (shader_unit_rec)


State 5

    4 shader_unit: function .

    $default  reduce using rule 4 (shader_unit)


State 6

    5 shader_unit: function_prototype .

    $default  reduce using rule 5 (shader_unit)


State 7

    7 function: function_decl . function_body
    8 function_prototype: function_decl . ';'
   16 function_body: . braced_body
   17 braced_body: . '{' body '}'

    ';'  shift, and go to state 10
    '{'  shift, and go to state 11

    function_body  go to state 12
    braced_body    go to state 13


State 8

    6 shader_unit: struct .

    $default  reduce using rule 6 (shader_unit)


State 9

    9 function_decl: attribute_rec . type IDENTIFIER function_parameters
   60 struct: attribute_rec . "struct" '{' struct_body '}'
  120 type: . type_mod type_variant type_suffix
  125 type_mod: . "const"
  126         | . "specconst"
  127         | . "novar"
  128         | . "runtime"
  129         | . %empty  ["void", "int", "float", "bool", "mat", "vec", "img", "smpl", "simg", USER_DEFINED_TYPE]
  152 attribute_rec: attribute_rec . attribute
  154 attribute: . "[[" attribute_body "]]"

    "const"      shift, and go to state 14
    "specconst"  shift, and go to state 15
    "novar"      shift, and go to state 16
    "runtime"    shift, and go to state 17
    "struct"     shift, and go to state 18
    "[["         shift, and go to state 19

    $default  reduce using rule 129 (type_mod)

    type       go to state 20
    type_mod   go to state 21
    attribute  go to state 22


State 10

    8 function_prototype: function_decl ';' .

    $default  reduce using rule 8 (function_prototype)


State 11

   17 braced_body: . '{' body '}'
   17            | '{' . body '}'
   18 body: . statement_rec
   19     | . %empty  ['}']
   20 statement_rec: . statement_rec statement
   21              | . statement
   22 statement: . statement_nb
   23          | . braced_body
   24          | . var_def ';'
   28 statement_nb: . if_statement
   29             | . while_statement
   30             | . for_statement
   31             | . switch_statement
   32             | . do_while_statement
   33             | . expression ';'
   34             | . "return" expression ';'
   35             | . "return" ';'
   36             | . "continue" ';'
   37             | . "break" ';'
   38             | . ';'
   39 if_statement: . "if" '(' expression ')' statement
   40             | . "if" '(' var_def ';' expression ')' statement
   41 while_statement: . "while" '(' expression ')' statement
   42 for_statement: . "for" '(' for_init ';' for_condition ';' for_action ')' statement
   43 switch_statement: . "switch" switch_init switch_body
   44 do_while_statement: . "do" statement "while" '(' expression ')' ';'
   69 expression: . IDENTIFIER
   70           | . literal
   71           | . '(' comma_expression ')'
   72           | . expression '(' ')'
   73           | . expression '(' comma_expression ')'
   74           | . expression '[' expression ']'
   75           | . expression "->" expression
   76           | . expression "." expression
   77           | . expression '=' expression
   78           | . expression '+' expression
   79           | . expression '-' expression
   80           | . expression '*' expression
   81           | . expression '/' expression
   82           | . expression '%' expression
   83           | . expression "+=" expression
   84           | . expression "-=" expression
   85           | . expression "*=" expression
   86           | . expression "/=" expression
   87           | . expression "%=" expression
   88           | . expression "&=" expression
   89           | . expression "|=" expression
   90           | . expression "^=" expression
   91           | . expression '^' expression
   92           | . expression '|' expression
   93           | . expression '&' expression
   94           | . expression "||" expression
   95           | . expression "&&" expression
   96           | . expression "==" expression
   97           | . expression "!=" expression
   98           | . expression LESS expression
   99           | . expression MORE expression
  100           | . expression "<=" expression
  101           | . expression ">=" expression
  102           | . '-' expression
  103           | . '+' expression
  104           | . '*' expression
  105           | . '&' expression
  106           | . '!' expression
  107           | . '~' expression
  108           | . "++" expression
  109           | . "--" expression
  110           | . expression "++"
  111           | . expression "--"
  112           | . expression '?' expression ':' expression
  113 literal: . NUMLITERAL
  114        | . STRINGLITERAL
  115 var_def: . attribute_rec type var_def_continious
  152 attribute_rec: . attribute_rec attribute
  153              | . %empty  ["const", "specconst", "novar", "runtime", "void", "int", "float", "bool", "mat", "vec", "img", "smpl", "simg", USER_DEFINED_TYPE, "[["]

    "do"           shift, and go to state 23
    "while"        shift, and go to state 24
    "if"           shift, and go to state 25
    "switch"       shift, and go to state 26
    "for"          shift, and go to state 27
    "return"       shift, and go to state 28
    "break"        shift, and go to state 29
    "continue"     shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    NUMLITERAL     shift, and go to state 32
    STRINGLITERAL  shift, and go to state 33
    "++"           shift, and go to state 34
    "--"           shift, and go to state 35
    '&'            shift, and go to state 36
    '+'            shift, and go to state 37
    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '~'            shift, and go to state 41
    '('            shift, and go to state 42
    ';'            shift, and go to state 43
    '{'            shift, and go to state 11

    '}'       reduce using rule 19 (body)
    $default  reduce using rule 153 (attribute_rec)

    braced_body         go to state 44
    body                go to state 45
    statement_rec       go to state 46
    statement           go to state 47
    statement_nb        go to state 48
    if_statement        go to state 49
    while_statement     go to state 50
    for_statement       go to state 51
    switch_statement    go to state 52
    do_while_statement  go to state 53
    expression          go to state 54
    literal             go to state 55
    var_def             go to state 56
    attribute_rec       go to state 57


State 12

    7 function: function_decl function_body .

    $default  reduce using rule 7 (function)


State 13

   16 function_body: braced_body .

    $default  reduce using rule 16 (function_body)


State 14

  125 type_mod: "const" .

    $default  reduce using rule 125 (type_mod)


State 15

  126 type_mod: "specconst" .

    $default  reduce using rule 126 (type_mod)


State 16

  127 type_mod: "novar" .

    $default  reduce using rule 127 (type_mod)


State 17

  128 type_mod: "runtime" .

    $default  reduce using rule 128 (type_mod)


State 18

   60 struct: attribute_rec "struct" . '{' struct_body '}'

    '{'  shift, and go to state 58


State 19

  154 attribute: "[[" . attribute_body "]]"
  155 attribute_body: . IDENTIFIER
  156               | . IDENTIFIER ':' NUMLITERAL
  157               | . IDENTIFIER ':' STRINGLITERAL
  158               | . IDENTIFIER ':' IDENTIFIER

    IDENTIFIER  shift, and go to state 59

    attribute_body  go to state 60


State 20

    9 function_decl: attribute_rec type . IDENTIFIER function_parameters

    IDENTIFIER  shift, and go to state 61


State 21

  120 type: type_mod . type_variant type_suffix
  130 type_variant: . simple_type
  131             | . custom_type
  132             | . complex_type_variant
  133 custom_type: . USER_DEFINED_TYPE
  134 simple_type: . void_type
  135            | . int_type
  136            | . float_type
  137            | . bool_type
  138 complex_type_variant: . matrix_type
  139                     | . vector_type
  140                     | . image_type
  141                     | . sampler_type
  142                     | . sampled_image_type
  143 void_type: . "void"
  144 int_type: . "int"
  145 float_type: . "float"
  146 bool_type: . "bool"
  147 vector_type: . "vec" '<' simple_type ',' NUMLITERAL '>'
  148 matrix_type: . "mat" '<' simple_type ',' NUMLITERAL ',' NUMLITERAL '>'
  149 image_type: . "img"
  150 sampler_type: . "smpl"
  151 sampled_image_type: . "simg"

    "void"             shift, and go to state 62
    "int"              shift, and go to state 63
    "float"            shift, and go to state 64
    "bool"             shift, and go to state 65
    "mat"              shift, and go to state 66
    "vec"              shift, and go to state 67
    "img"              shift, and go to state 68
    "smpl"             shift, and go to state 69
    "simg"             shift, and go to state 70
    USER_DEFINED_TYPE  shift, and go to state 71

    type_variant          go to state 72
    custom_type           go to state 73
    simple_type           go to state 74
    complex_type_variant  go to state 75
    void_type             go to state 76
    int_type              go to state 77
    float_type            go to state 78
    bool_type             go to state 79
    vector_type           go to state 80
    matrix_type           go to state 81
    image_type            go to state 82
    sampler_type          go to state 83
    sampled_image_type    go to state 84


State 22

  152 attribute_rec: attribute_rec attribute .

    $default  reduce using rule 152 (attribute_rec)


State 23

   17 braced_body: . '{' body '}'
   22 statement: . statement_nb
   23          | . braced_body
   24          | . var_def ';'
   28 statement_nb: . if_statement
   29             | . while_statement
   30             | . for_statement
   31             | . switch_statement
   32             | . do_while_statement
   33             | . expression ';'
   34             | . "return" expression ';'
   35             | . "return" ';'
   36             | . "continue" ';'
   37             | . "break" ';'
   38             | . ';'
   39 if_statement: . "if" '(' expression ')' statement
   40             | . "if" '(' var_def ';' expression ')' statement
   41 while_statement: . "while" '(' expression ')' statement
   42 for_statement: . "for" '(' for_init ';' for_condition ';' for_action ')' statement
   43 switch_statement: . "switch" switch_init switch_body
   44 do_while_statement: . "do" statement "while" '(' expression ')' ';'
   44                   | "do" . statement "while" '(' expression ')' ';'
   69 expression: . IDENTIFIER
   70           | . literal
   71           | . '(' comma_expression ')'
   72           | . expression '(' ')'
   73           | . expression '(' comma_expression ')'
   74           | . expression '[' expression ']'
   75           | . expression "->" expression
   76           | . expression "." expression
   77           | . expression '=' expression
   78           | . expression '+' expression
   79           | . expression '-' expression
   80           | . expression '*' expression
   81           | . expression '/' expression
   82           | . expression '%' expression
   83           | . expression "+=" expression
   84           | . expression "-=" expression
   85           | . expression "*=" expression
   86           | . expression "/=" expression
   87           | . expression "%=" expression
   88           | . expression "&=" expression
   89           | . expression "|=" expression
   90           | . expression "^=" expression
   91           | . expression '^' expression
   92           | . expression '|' expression
   93           | . expression '&' expression
   94           | . expression "||" expression
   95           | . expression "&&" expression
   96           | . expression "==" expression
   97           | . expression "!=" expression
   98           | . expression LESS expression
   99           | . expression MORE expression
  100           | . expression "<=" expression
  101           | . expression ">=" expression
  102           | . '-' expression
  103           | . '+' expression
  104           | . '*' expression
  105           | . '&' expression
  106           | . '!' expression
  107           | . '~' expression
  108           | . "++" expression
  109           | . "--" expression
  110           | . expression "++"
  111           | . expression "--"
  112           | . expression '?' expression ':' expression
  113 literal: . NUMLITERAL
  114        | . STRINGLITERAL
  115 var_def: . attribute_rec type var_def_continious
  152 attribute_rec: . attribute_rec attribute
  153              | . %empty  ["const", "specconst", "novar", "runtime", "void", "int", "float", "bool", "mat", "vec", "img", "smpl", "simg", USER_DEFINED_TYPE, "[["]

    "do"           shift, and go to state 23
    "while"        shift, and go to state 24
    "if"           shift, and go to state 25
    "switch"       shift, and go to state 26
    "for"          shift, and go to state 27
    "return"       shift, and go to state 28
    "break"        shift, and go to state 29
    "continue"     shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    NUMLITERAL     shift, and go to state 32
    STRINGLITERAL  shift, and go to state 33
    "++"           shift, and go to state 34
    "--"           shift, and go to state 35
    '&'            shift, and go to state 36
    '+'            shift, and go to state 37
    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '~'            shift, and go to state 41
    '('            shift, and go to state 42
    ';'            shift, and go to state 43
    '{'            shift, and go to state 11

    $default  reduce using rule 153 (attribute_rec)

    braced_body         go to state 44
    statement           go to state 85
    statement_nb        go to state 48
    if_statement        go to state 49
    while_statement     go to state 50
    for_statement       go to state 51
    switch_statement    go to state 52
    do_while_statement  go to state 53
    expression          go to state 54
    literal             go to state 55
    var_def             go to state 56
    attribute_rec       go to state 57


State 24

   41 while_statement: "while" . '(' expression ')' statement

    '('  shift, and go to state 86


State 25

   39 if_statement: "if" . '(' expression ')' statement
   40             | "if" . '(' var_def ';' expression ')' statement

    '('  shift, and go to state 87


State 26

   43 switch_statement: "switch" . switch_init switch_body
   51 switch_init: . '(' expression ')'
   52            | . '(' var_def ';' expression ')'

    '('  shift, and go to state 88

    switch_init  go to state 89


State 27

   42 for_statement: "for" . '(' for_init ';' for_condition ';' for_action ')' statement

    '('  shift, and go to state 90


State 28

   34 statement_nb: "return" . expression ';'
   35             | "return" . ';'
   69 expression: . IDENTIFIER
   70           | . literal
   71           | . '(' comma_expression ')'
   72           | . expression '(' ')'
   73           | . expression '(' comma_expression ')'
   74           | . expression '[' expression ']'
   75           | . expression "->" expression
   76           | . expression "." expression
   77           | . expression '=' expression
   78           | . expression '+' expression
   79           | . expression '-' expression
   80           | . expression '*' expression
   81           | . expression '/' expression
   82           | . expression '%' expression
   83           | . expression "+=" expression
   84           | . expression "-=" expression
   85           | . expression "*=" expression
   86           | . expression "/=" expression
   87           | . expression "%=" expression
   88           | . expression "&=" expression
   89           | . expression "|=" expression
   90           | . expression "^=" expression
   91           | . expression '^' expression
   92           | . expression '|' expression
   93           | . expression '&' expression
   94           | . expression "||" expression
   95           | . expression "&&" expression
   96           | . expression "==" expression
   97           | . expression "!=" expression
   98           | . expression LESS expression
   99           | . expression MORE expression
  100           | . expression "<=" expression
  101           | . expression ">=" expression
  102           | . '-' expression
  103           | . '+' expression
  104           | . '*' expression
  105           | . '&' expression
  106           | . '!' expression
  107           | . '~' expression
  108           | . "++" expression
  109           | . "--" expression
  110           | . expression "++"
  111           | . expression "--"
  112           | . expression '?' expression ':' expression
  113 literal: . NUMLITERAL
  114        | . STRINGLITERAL

    IDENTIFIER     shift, and go to state 31
    NUMLITERAL     shift, and go to state 32
    STRINGLITERAL  shift, and go to state 33
    "++"           shift, and go to state 34
    "--"           shift, and go to state 35
    '&'            shift, and go to state 36
    '+'            shift, and go to state 37
    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '~'            shift, and go to state 41
    '('            shift, and go to state 42
    ';'            shift, and go to state 91

    expression  go to state 92
    literal     go to state 55


State 29

   37 statement_nb: "break" . ';'

    ';'  shift, and go to state 93


State 30

   36 statement_nb: "continue" . ';'

    ';'  shift, and go to state 94


State 31

   69 expression: IDENTIFIER .

    $default  reduce using rule 69 (expression)


State 32

  113 literal: NUMLITERAL .

    $default  reduce using rule 113 (literal)


State 33

  114 literal: STRINGLITERAL .

    $default  reduce using rule 114 (literal)


State 34

   69 expression: . IDENTIFIER
   70           | . literal
   71           | . '(' comma_expression ')'
   72           | . expression '(' ')'
   73           | . expression '(' comma_expression ')'
   74           | . expression '[' expression ']'
   75           | . expression "->" expression
   76           | . expression "." expression
   77           | . expression '=' expression
   78           | . expression '+' expression
   79           | . expression '-' expression
   80           | . expression '*' expression
   81           | . expression '/' expression
   82           | . expression '%' expression
   83           | . expression "+=" expression
   84           | . expression "-=" expression
   85           | . expression "*=" expression
   86           | . expression "/=" expression
   87           | . expression "%=" expression
   88           | . expression "&=" expression
   89           | . expression "|=" expression
   90           | . expression "^=" expression
   91           | . expression '^' expression
   92           | . expression '|' expression
   93           | . expression '&' expression
   94           | . expression "||" expression
   95           | . expression "&&" expression
   96           | . expression "==" expression
   97           | . expression "!=" expression
   98           | . expression LESS expression
   99           | . expression MORE expression
  100           | . expression "<=" expression
  101           | . expression ">=" expression
  102           | . '-' expression
  103           | . '+' expression
  104           | . '*' expression
  105           | . '&' expression
  106           | . '!' expression
  107           | . '~' expression
  108           | . "++" expression
  108           | "++" . expression
  109           | . "--" expression
  110           | . expression "++"
  111           | . expression "--"
  112           | . expression '?' expression ':' expression
  113 literal: . NUMLITERAL
  114        | . STRINGLITERAL

    IDENTIFIER     shift, and go to state 31
    NUMLITERAL     shift, and go to state 32
    STRINGLITERAL  shift, and go to state 33
    "++"           shift, and go to state 34
    "--"           shift, and go to state 35
    '&'            shift, and go to state 36
    '+'            shift, and go to state 37
    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '~'            shift, and go to state 41
    '('            shift, and go to state 42

    expression  go to state 95
    literal     go to state 55


State 35

   69 expression: . IDENTIFIER
   70           | . literal
   71           | . '(' comma_expression ')'
   72           | . expression '(' ')'
   73           | . expression '(' comma_expression ')'
   74           | . expression '[' expression ']'
   75           | . expression "->" expression
   76           | . expression "." expression
   77           | . expression '=' expression
   78           | . expression '+' expression
   79           | . expression '-' expression
   80           | . expression '*' expression
   81           | . expression '/' expression
   82           | . expression '%' expression
   83           | . expression "+=" expression
   84           | . expression "-=" expression
   85           | . expression "*=" expression
   86           | . expression "/=" expression
   87           | . expression "%=" expression
   88           | . expression "&=" expression
   89           | . expression "|=" expression
   90           | . expression "^=" expression
   91           | . expression '^' expression
   92           | . expression '|' expression
   93           | . expression '&' expression
   94           | . expression "||" expression
   95           | . expression "&&" expression
   96           | . expression "==" expression
   97           | . expression "!=" expression
   98           | . expression LESS expression
   99           | . expression MORE expression
  100           | . expression "<=" expression
  101           | . expression ">=" expression
  102           | . '-' expression
  103           | . '+' expression
  104           | . '*' expression
  105           | . '&' expression
  106           | . '!' expression
  107           | . '~' expression
  108           | . "++" expression
  109           | . "--" expression
  109           | "--" . expression
  110           | . expression "++"
  111           | . expression "--"
  112           | . expression '?' expression ':' expression
  113 literal: . NUMLITERAL
  114        | . STRINGLITERAL

    IDENTIFIER     shift, and go to state 31
    NUMLITERAL     shift, and go to state 32
    STRINGLITERAL  shift, and go to state 33
    "++"           shift, and go to state 34
    "--"           shift, and go to state 35
    '&'            shift, and go to state 36
    '+'            shift, and go to state 37
    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '~'            shift, and go to state 41
    '('            shift, and go to state 42

    expression  go to state 96
    literal     go to state 55


State 36

   69 expression: . IDENTIFIER
   70           | . literal
   71           | . '(' comma_expression ')'
   72           | . expression '(' ')'
   73           | . expression '(' comma_expression ')'
   74           | . expression '[' expression ']'
   75           | . expression "->" expression
   76           | . expression "." expression
   77           | . expression '=' expression
   78           | . expression '+' expression
   79           | . expression '-' expression
   80           | . expression '*' expression
   81           | . expression '/' expression
   82           | . expression '%' expression
   83           | . expression "+=" expression
   84           | . expression "-=" expression
   85           | . expression "*=" expression
   86           | . expression "/=" expression
   87           | . expression "%=" expression
   88           | . expression "&=" expression
   89           | . expression "|=" expression
   90           | . expression "^=" expression
   91           | . expression '^' expression
   92           | . expression '|' expression
   93           | . expression '&' expression
   94           | . expression "||" expression
   95           | . expression "&&" expression
   96           | . expression "==" expression
   97           | . expression "!=" expression
   98           | . expression LESS expression
   99           | . expression MORE expression
  100           | . expression "<=" expression
  101           | . expression ">=" expression
  102           | . '-' expression
  103           | . '+' expression
  104           | . '*' expression
  105           | . '&' expression
  105           | '&' . expression
  106           | . '!' expression
  107           | . '~' expression
  108           | . "++" expression
  109           | . "--" expression
  110           | . expression "++"
  111           | . expression "--"
  112           | . expression '?' expression ':' expression
  113 literal: . NUMLITERAL
  114        | . STRINGLITERAL

    IDENTIFIER     shift, and go to state 31
    NUMLITERAL     shift, and go to state 32
    STRINGLITERAL  shift, and go to state 33
    "++"           shift, and go to state 34
    "--"           shift, and go to state 35
    '&'            shift, and go to state 36
    '+'            shift, and go to state 37
    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '~'            shift, and go to state 41
    '('            shift, and go to state 42

    expression  go to state 97
    literal     go to state 55


State 37
